Added bmi web output, readme fixes